<resources>
    <string name="app_name">E-VOTE</string>
    <string name="login2">LOGIN2</string>
    <string name="pass2">PASS2</string>
    <string name="roll2">ROLL2</string>
    <string name="vote">VOTE</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="login">LOGIN</string>
    <string name="result">RESULT</string>
    <string name="register">REGISTER</string>
    <string name="gfcg">GFCG</string>
    <string name="gfgv">GFGV</string>
    <string name="hbhb">HBHB</string>


</resources>
